--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <!-- ID.me Widget Buttons -->
-    <span id="idme-wallet-button" data-scope="military,student" data-client-id="CLIENT_ID" data-response="token" data-redirect="REDIRECT_URI" data-op="signin" data-text="Military and Students receive 10% off with ID.me" data-show-verify="true"></span>
+    <span id="idme-wallet-button" data-scope="kba_replacement" data-client-id="29ec8f6c329285f08eaf9b2c566ebf23" data-response="token" data-redirect="https://katznoah.github.io" data-op="signin" data-text="Verify Your Identity" data-show-verify="true"></span>
 
     <script src="https://s3.amazonaws.com/idme/developer/idme-buttons/assets/js/idme-wallet-button.js"></script>
   </body>
