fixed idme button

--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
-<html>
-
-  <head>
-    <!-- jQuery Dependency -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
-
-    <!-- ID.me Sample Code -->
-    <script src="idme.js"></script>
-  </head>
-
-  <body>
-    <!-- ID.me Widget Buttons -->
-    <span id="idme-wallet-button" data-scope="military,student" data-client-id="29ec8f6c329285f08eaf9b2c566ebf23" data-response="token" data-redirect="https://katznoah.github.io" data-op="signin" data-text="Verify Your Identity" data-show-verify="true"></span>
-
-    <script src="https://s3.amazonaws.com/idme/developer/idme-buttons/assets/js/idme-wallet-button.js"></script>
-  </body>
-
-</html>
+<span
+  id="idme-wallet-button"
+  data-scope="military,responder,student,teacher,government"
+  data-client-id="29ec8f6c329285f08eaf9b2c566ebf23"
+  data-redirect="https://katznoah.github.io"
+  data-response="code"
+  data-text="[AFFINITY GROUP] receives [OFFER] with ID.me"
+  data-show-verify="true">
+</span>
+<script src="https://s3.amazonaws.com/idme/developer/idme-buttons/assets/js/idme-wallet-button.js"></script>
